# CS179

./: .travis.yml  CMakeLists.txt  README  Testframe.cpp  Visualization.m  main.cpp
Domain/: CMakeLists.txt
Domain/include/: Boundary.h  BoundaryDataGenerator.h  Domain.h  Vec2D.h
Domain/src/: Boundary.cpp  BoundaryDataGenerator.cpp  Domain.cpp  Vec2D.cpp
Domain/unit_test/: CMakeLists.txt  Testframe.cpp
Reader/: CMakeLists.txt
Reader/include/: Reader.h
Reader/src/: Reader.cpp
Reader/unit_test/: CMakeLists.txt  Testframe.cpp
Solver/: CMakeLists.txt
Solver/include/: Solver.h  SolverEigen.h  SolverGPU.cuh  SolverGPU.h
Solver/src/: Solver.cpp  SolverEigen.cpp  SolverGPU.cpp  SolverGPU.cu
Solver/unit_test/: CMakeLists.txt  Testframe.cpp
Testdata/: DataGenerator.m  test.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
Writer/: CMakeLists.txt
Writer/include/: Writer.h
Writer/src/: Writer.cpp
Writer/unit_test/: CMakeLists.txt  Testframe.cpp
